app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require bootstrap-datepicker
 *= require fullcalendar
 */

// Custom bootstrap variables must be set or imported *before* bootstrap.
@import "bootstrap";
@import "jquery-ui";



/*
 * Navbar
 */

.ml-navbar {
  min-height: 4rem;
}


/*
 * Content
 */

 .ml-content {
  margin-top: 4rem;
 }


/*
 * Sidebar
 */

.ml-sidebar {
  position: -webkit-sticky;
  position: sticky;
  top: 4rem;
  z-index: 1000;
  max-height: calc(100vh - 4rem);
  border-right: 1px solid rgba(0, 0, 0, 0.125);
}

.ml-filter {
  @include media-breakpoint-up(md) {
    display: block;
  }
}

/*
 * Equipment List
 */

.ml-img-list {
  height: 4rem;
}


/*
 * FOR Tooltip
 */

.tooltip-toggle {
  cursor: pointer;
  position: relative;

  svg {
    height: 18px;
    width: 18px;
  }

  //Tooltip text container
  &::before {
    position: absolute;
    top: 40px;
    left: -10px;
    background-color: #2B222A;
    border-radius: 5px;
    color: #fff;
    content: attr(aria-label); //This pulls in the text from the element with the tooltip
    padding: 0.1rem;
    text-transform: none;
    transition: all 0.5s ease;
    width: 200px;
  }

  //Setting up the transition
  &::before,
  &::after {
    color: #efefef;
    font-family: monospace;
    font-size: 12px;
    opacity: 0;
    pointer-events: none;
    text-align: center;
  }

  //Triggering the transition
  &:focus::before,
  &:focus::after,
  &:hover::before,
  &:hover::after {
    opacity: 1;
    transition: all 0.75s ease;
  }
}




/*--------------Tasks Widget--------------*/

section {
  padding: 0px;

}
.task-content {
  margin-bottom: 30px;
}

.task-panel {
  background: #fff;
  text-align: left;
  box-shadow: 0px 3px 2px #aab2bd;
  margin: 5px;

}
.panel-body {
  padding: 5px;
}

.panel-heading {
  text-align: center;
}

.tasks-widget .task-content:after {
  clear: both;
}

